[tool.poetry]
name = "modbot"
version = "0.1.0"
description = "CLI to add and remove dotfiles linked with Dotbot"
authors = ["Kevin Lane <lane.kevin.a@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/klane/modbot"

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
dotbot = "^1.18"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.10"
pytest-lazy-fixture = "^0.6.3"
pytest-mock = "^2.0"
pytest-sugar = "^0.9.4"
pre-commit = "^1.18"
tox = "^3.20"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
known_third_party = ["dotbot", "pytest", "yaml"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
skipsdist = true
envlist = py{27,35,36,37,38},lint

[testenv]
skip_install = true
whitelist_externals = poetry
setenv = HOME = {env:HOME:home}
commands =
    poetry install
    poetry run pytest tests/ --cov=modbot

[testenv:lint]
deps = pre-commit
commands =
    pre-commit install-hooks
    pre-commit run --all-files

[flake8]
ignore = B950,E203,W503
max-line-length = 88
max-complexity = 10
select = B,C,E,F,W,T4,B9
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
